# The-Ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  README.md  TRP1 Challenge Week 5_ Agentic Event Store & Enterprise Audit Infrastructure.md  pyproject.toml
starter/ledger/: event_store.py  exceptions.py  mcp_server.py  upcasters.py
starter/ledger/commands/: __init__.py  handlers.py
starter/ledger/domain/: regulation.py
starter/ledger/domain/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
starter/ledger/integrity/: __init__.py  audit_chain.py  gas_town.py
starter/ledger/models/: __init__.py  events.py
starter/ledger/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py  query_service.py
starter/schema/: application_summary.sql
starter/tests/: test_concurrency.py  test_gas_town.py  test_integrity_tamper_detection.py  test_mcp_lifecycle.py  test_projections.py  test_pydantic_models_and_errors.py  test_slo_projection_daemon.py  test_upcasting.py
starter/tests/phase1/: test_event_store.py
